--- a/CaseStudy1-line-chart-by-hour.Rmd
+++ b/CaseStudy1-line-chart-by-hour.Rmd
@@ -94,3 +94,41 @@ total_plot <- ggplot(data=total_duration_hour2, aes(y=ride_duration_hour, x=hour
 
 total_plot
 ```
+## Import the file that contains the aggregated data with the number of users by type by weekday and by hour of the day
+
+```{r}
+total_users <- read_csv("/cloud/project/UersByWeekday-Hour.csv")
+```
+
+## Checking the file:
+
+```{r}
+glimpse(total_users)
+```
+
+## Checking the name of the columns
+
+```{r}
+colnames(total_users)
+```
+
+### Plotting the data into line charts by hour of the day
+
+It is necessary to reorder the "weekday" column, so they can appear in the correct day order
+
+```{r}
+total_users2 <- total_users
+total_users2$weekday <- factor(total_users2$weekday, levels = c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))
+
+total_users_plot <- ggplot(data=total_users2, aes(y=number_of_users, x=hourofday)) +
+  geom_line(aes(color=member_casual)) + scale_color_hue(name = "Type of user") +
+  facet_wrap(~weekday) +
+  labs(x = "Hour of the day (24h format)", y = "Number of users",
+       title = "NUMBER OF USERS", 
+       subtitle = "Data aggregated by weekday, hour of the day, and type of user") +
+  theme(legend.position=c(0.45, 0.15))
+  
+
+total_users_plot
+```
+
